# rust-auth-server

./: .env.example  Cargo.toml  README.md
certs/: cert.pem  key.pem
migrations/: 000_setup.sql  001_users.sql  002_user_secrets.sql  003_user_emails.sql  004_user_email_secrets.sql  005_user_authentications.sql  006_user_authentication_secrets.sql  1_setup.sql  2_users.sql  3_user_emails.sql  4_user_authentications.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/handlers/: google.rs  login.rs  mod.rs  register.rs
src/http/: mod.rs
src/http/middleware/: mod.rs  services.rs  session.rs
src/http/repositories/: mod.rs  user_authentication_repository.rs  user_email_repository.rs  user_repository.rs  user_secret_repository.rs  user_secrets_repository.rs
src/http/routes/: google.rs  login.rs  me.rs  mod.rs  register.rs
src/http/services/: login_service.rs  mod.rs  oauth_registration_service.rs  registration_service.rs  session_service.rs  user_service.rs
src/http/types/: mod.rs  user.rs  user_authentication.rs  user_email.rs  user_secret.rs
src/http/utils/: encryption.rs  jwt.rs  mod.rs
src/https/: mod.rs
src/https/middleware/: cors.rs  mod.rs  oauth_google.rs
src/https/models/: user.rs
src/https/repositories/: user_authentication_repository.rs  user_email_repository.rs  user_repository.rs  user_secrets_repository.rs
src/https/routes/: google.rs  login.rs  register.rs
src/https/services/: login_service.rs  oauth_registration_service.rs  registration_service.rs
src/https/utils/: jwt.rs
src/https/utils/username_generator/: nouns.rs
src/middleware/: cors.rs  mod.rs  oauth_google.rs  postgres.rs
src/models/: mod.rs  oauth_profile.rs  user.rs
src/repositories/: mod.rs  user_authentication_repository.rs  user_email_repository.rs  user_repository.rs  user_secrets_repository.rs
src/services/: login_service.rs  mod.rs  oauth_registration_service.rs  registration_service.rs
src/utils/: jwt.rs  mod.rs
src/utils/username_generator/: adjectives.rs  mod.rs
