[package]
name = "rust-auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["headers"] }
dotenv = "0.15"
jsonwebtoken = "8"
oauth2 = "4.2"
once_cell = "1.15"
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
rust-argon2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "json", "time", "uuid"] }
time = "0.3"
tokio = { version = "1.20", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["cors", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
