[package]
name = "rust-auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
axum = { version = "0.5", features = ["headers"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "json", "time", "uuid"] }
tokio = { version = "1.22", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["cors", "trace"] }

# Tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication
jsonwebtoken = "8"
oauth2 = "4.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
rust-argon2 = "1.0"

# Utilities
anyhow = "1.0"
clap = { version = "4.1.6", features = ["derive", "env"] }
dotenv = "0.15"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = "0.3"
uuid = { version = "1.1", features = ["v4", "serde"] }
